# bookrag

./: .gitignore  CLAUDE.md  README.md  bookrag_deep_research_context.md  bookrag_pipeline_plan.md  config.yaml  curriculum.md  main.py  notes.md  pedagogy.md  pyproject.toml  run_christmas_carol.py  run_cognee_test.py  subconcious.md  visualize_results.py
design-handoff/: README.md
design_handoff_bookrag_reader/: BookRAG Design System.html  EPUB Ingestion Plan.html  EPUB Visualizer v6.html  Handoff Spec.html  README.md  components.jsx  reader-chat-animations.jsx  reader-chat-variations.jsx  reader-reading-mode.jsx  reader-shared.jsx  reader-v3-states.jsx  reader-var-ab.jsx  reader-var-cd.jsx  reader-var-d-plus.jsx  reader-var-ef.jsx
evaluations/: christmas_carol_questions.json
frontend/: .env.example  .eslintrc.cjs  .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.eslint.json  tsconfig.json  vite.config.ts  vitest.setup.ts
models/: __init__.py  config.py  datapoints.py  pipeline_state.py  thefinalbookrag.code-workspace
pipeline/: __init__.py  batcher.py  benchmark_eval.py  booknlp_runner.py  booknlp_utils.py  chunk_index.py  cognee_pipeline.py  consolidation.py  content_hash.py  coref_resolver.py  epub_parser.py  extraction_validation.py  ontology_discovery.py  ontology_reviewer.py  orchestrator.py  spoiler_filter.py  text_cleaner.py  tsv_utils.py
prompts/: consolidate_entity_prompt.txt  extraction_prompt.txt
research/: 2026-04-22_coref_and_graphrag_alternatives.md
scripts/: backfill_chunk_ordinals.py  eval_query.py  (+5 more)
(+311 files in other folders)
