[project]
name = "bookrag"
version = "0.1.0"
description = "Spoiler-free AI chatbot for literature — upload & ingestion pipeline"
requires-python = ">=3.10"
readme = "bookrag_pipeline_plan.md"

dependencies = [
    # Web framework
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "python-multipart>=0.0.6",

    # Data models & config
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",

    # Logging
    "loguru>=0.7",

    # EPUB parsing
    "ebooklib>=0.18",

    # NLP — BookNLP (optional, heavy)
    # Install separately: pip install booknlp
    # Requires spacy model: python -m spacy download en_core_web_sm

    # Ontology discovery
    "rdflib>=7.0",
    "scikit-learn>=1.3",
    "bertopic>=0.16",       # optional — gracefully skipped if missing

    # Prompt rendering
    "jinja2>=3.1",

    # Knowledge graph (Cognee)
    # Install separately: pip install cognee
    # Cognee brings its own Kuzu, LanceDB, SQLite deps

    # LLM provider
    "anthropic>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",          # for FastAPI TestClient
    "rich>=13.0",           # optional pretty terminal output
]
booknlp = [
    "booknlp>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
